<resources>
    <string name="app_name">NewsTest</string>
    <string name="zixun">资讯</string>
    <string name="yinshipin">音视频</string>
    <string name="zhuanti">专题</string>
    <string name="wode">我的</string>
    <string name="click_to_skip">s 跳过</string>
    <string name="font_size_small">小</string>
    <string name="font_size_medium">中</string>
    <string name="font_size_big">大</string>
    <string name="font_size_large">特大</string>
    <string name="font_size">字体大小</string>
    <string name="cancel">取消</string>


</resources>