<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/font_size"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <RadioGroup
        android:id="@+id/rg_dialog"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_dialog_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/font_size_small"
            android:textSize="18sp"/>
        <RadioButton
            android:id="@+id/rb_dialog_medium"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/font_size_medium"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/rb_dialog_big"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/font_size_big"
            android:textSize="22sp"/>
        <RadioButton
            android:id="@+id/rb_dialog_large"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/font_size_large"
            android:textSize="24sp"/>
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <TextView
        android:id="@+id/tv_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/cancel"
        android:clickable="true"
        android:background="@drawable/selector_item"
        android:textSize="20sp"/>

</LinearLayout>